--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -222,6 +222,7 @@
 
             .container {
                 border-radius: 0;
+                width: 100%;
             }
 
             .header {
@@ -273,7 +274,7 @@
                 <button type="button" class="button button-small" id="copyTextWithTimestampsBtn">Скопировать текст с временными метками</button>
                 <button type="button" class="button button-small" id="saveTextBtn">Сохранить текст</button>
                 <button type="button" class="button button-small" id="saveTextWithTimestampsBtn">Сохранить текст с временными метками</button>
-                <button type="button" class="button button-small" id="saveLrcBtn">Сохранить как LRC</button>
+                <button type="button" class="button button-small" id="saveLrcBtn">Сохранить как .lrc</button>
                 <button type="button" class="button button-small" id="saveSubtitlesBtn">Сохранить как субтитры</button>
             </div>
             
