--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -387,7 +387,7 @@
 
                 this.data = { segments: [] };
 
-                this.eventSource = new EventSource(`/stream/${this.taskId}`);
+                this.eventSource = new EventSource(`/api/stream/${this.taskId}`);
 
                 this.eventSource.onmessage = (event) => {
                     try {
@@ -517,7 +517,7 @@
                 if (!this.taskId) return;
 
                 try {
-                    const response = await fetch(`/cancel/${this.taskId}`, {
+                    const response = await fetch(`/api/cancel/${this.taskId}`, {
                         method: 'POST'
                     });
 
